--- a/scratch paper.ipynb
+++ b/scratch paper.ipynb
@@ -2996,7 +2996,43 @@
       "Training loss:....... 0.20150909627588412\n",
       "Validation loss:..... 0.20223096746300895\n",
       "\n",
-      "EPOCH:  349\n"
+      "EPOCH:  349\n",
+      "Training loss:....... 0.20104123747196442\n",
+      "Validation loss:..... 0.20210469951705326\n",
+      "\n",
+      "EPOCH:  350\n",
+      "Training loss:....... 0.20120687597095013\n",
+      "Validation loss:..... 0.20253682349409377\n",
+      "\n",
+      "EPOCH:  351\n",
+      "Training loss:....... 0.20129458234904293\n",
+      "Validation loss:..... 0.20214175492052047\n",
+      "\n",
+      "EPOCH:  352\n",
+      "Training loss:....... 0.20142132929338816\n",
+      "Validation loss:..... 0.20215599499051534\n",
+      "\n",
+      "EPOCH:  353\n",
+      "Training loss:....... 0.20121892560689975\n",
+      "Validation loss:..... 0.20152161140290517\n",
+      "\n",
+      "EPOCH:  354\n",
+      "Training loss:....... 0.20126137323082446\n",
+      "Validation loss:..... 0.2015932003657023\n",
+      "\n",
+      "EPOCH:  355\n",
+      "Training loss:....... 0.20134659501881644\n",
+      "Validation loss:..... 0.20193384351238372\n",
+      "\n",
+      "EPOCH:  356\n",
+      "Training loss:....... 0.20149076232514063\n",
+      "Validation loss:..... 0.20188000325172667\n",
+      "\n",
+      "EPOCH:  357\n",
+      "Training loss:....... 0.2012850706950544\n",
+      "Validation loss:..... 0.20130574868785012\n",
+      "\n",
+      "EPOCH:  358\n"
      ]
     }
    ],
